[project]
name = "sttts"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "kokoro>=0.9.4",
    "mss>=10.1.0",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "playwright>=1.40.0",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "torch==2.8.0+rocm6.3",
    "trafilatura>=2.0.0",
    "transformers>=5.5.3",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/rocm6.3"
default = true

[tool.uv]
index-strategy = "unsafe-best-match"
